-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Networking & Observability
-
Fully Compatible
-
ALL
-
v8.1
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
We added printing an error log message in the ServerStatus collector if a ServerStatus section throws an exception.
#36794
This caused a failure of a performance test because a new error log message was detected.
https://jira.mongodb.org/browse/BF-38104
After investigating sources of the FTDC server (db/ftdc/ftdc_server.cpp) it was found that FTDC server actually expects to get a failure of a ServerStatus section, which changes its behavior.
mongo/src/mongo/db/ftdc/ftdc_server.cpp
Line 329 in 68377e7
| if (status.isA<ErrorCategory::ShutdownError>()) { |
|---|
It means the failure is a normal behavior. In this case printing an error log message is not an expected behavior and should be avoided.
- is related to
-
SERVER-107656 Fix reporting server status command section's exceptions
-
- Closed
-
- related to
-
SERVER-97615 Provide visibility into which ServerStatus section threw in FTDC thread
-
- Closed
-