SERVER-106644 Prevent printing error log message for ServerStatus if shutdown (#37645)

GitOrigin-RevId: 4e1fb5ae0f5675f0d98decd931586b7ebcfccb85